[package]
name = "aidfs"
version = "0.1.0"
authors = ["aidos9 <20310468+aidos9@users.noreply.github.com>"]
edition = "2018"

[dependencies]
byteorder = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false }

[dev-dependencies]
chrono = { version = "0.4", default-features = true }
