[package]
name = "mkimage-voxfs"
version = "0.1.0"
authors = ["aidos9 <20310468+aidos9@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxfs = { path = "../../voxfs" }
voxfs-tool-lib = { path = "../voxfs-tool-lib" }
clap = "2.33"